[build-system]
requires = ["setuptools>=61.0", "numpy>=1.20.0", "scipy>=1.11.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tte_depth"
version = "1.0.0"
authors = [
  { name="pkseeg", email="parker@pkseeg.com" },
]
description = "A package for implementing transformer-based text embedding depth"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pkseeg/tte_depth"
"Bug Tracker" = "https://github.com/pkseeg/tte_depth/issues"